--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "daisyui": "^5.1.14",
     "framer-motion": "^12.23.13",
     "lucide-react": "^0.544.0",
+    "mongodb": "^6.20.0",
     "next": "15.5.3",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
