--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "daisyui": "^5.1.14",
+    "firebase": "^12.3.0",
     "framer-motion": "^12.23.13",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.544.0",
