--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "clsx": "^2.1.1",
     "daisyui": "^5.1.26",
     "firebase": "^12.3.0",
+    "firebase-admin": "^13.5.0",
     "framer-motion": "^12.23.13",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.544.0",
     "mongodb": "^6.20.0",
     "next": "15.5.3",
     "next-auth": "^4.24.11",
+    "nodemailer": "^6.10.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
