--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-hook-form": "^7.63.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "recharts": "^3.2.1",
     "sweetalert2": "^11.24.0",
     "swiper": "^12.0.1",
     "tailwind-merge": "^3.3.1"
