--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^2.0.23",
+    "@assistant-ui/react-ai-sdk": "^1.1.8",
+    "@google/generative-ai": "^0.24.1",
     "@lottiefiles/dotlottie-react": "^0.17.1",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -21,6 +24,7 @@
     "@stripe/react-stripe-js": "^5.2.0",
     "@stripe/stripe-js": "^8.1.0",
     "@tanstack/react-query": "^5.90.3",
+    "ai": "^5.0.80",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
@@ -35,6 +39,7 @@
     "next": "15.5.3",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.1",
+    "openai": "^6.7.0",
     "puppeteer": "^24.25.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
