--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "next": "15.5.3",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.1",
+    "puppeteer": "^24.25.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
