--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "stripe": "^19.1.0",
     "sweetalert2": "^11.24.0",
     "swiper": "^12.0.1",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
